fixed bug with wave 2px short on mobiles

--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -24,7 +24,7 @@
 
 .svg--wave3 {
     display: none;
-    width: 100vw;
+    width: 105vw;
     position: absolute;
     bottom: -23px;
     left: 0;
