--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -66,14 +66,15 @@
 .tabs .tab-body {
     position:relative;
     background:#fff;
-    height: 120%;
-    padding:20px 0;
+    height: 130%;
     overflow:hidden;
     background-color: transparent;
+    /* border: 10px solid blue;s */
+    
 }
 .tabs .tab-body > div {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: absolute;
     opacity: 0;
     top: -100%;
@@ -90,6 +91,7 @@
     top: 10%;
     opacity:1;
 }
+
 .tabs .body--right h1 {
     color: var(--color1);
     font-weight: 500;
@@ -109,11 +111,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    background-color: green;
 }
 
 .body--left img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -129,7 +132,7 @@
     height: 100%;
     display: flex;
     justify-content: flex-end;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .body--right--wrapper {
@@ -184,6 +187,7 @@
     padding: 2em 2em;
     display: flex;
     flex-direction: column;
+    background-color: #fff;
 }
 
 .details-m  h1{
